--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
+django==2.2
+djangorestframework==3.9.2
 asgiref==3.5.2
 certifi==2022.6.15
 charset-normalizer==2.1.1
-dj-database-url==1.0.0
-Django==4.1
 gunicorn==20.1.0
 idna==3.3
 psycopg2-binary==2.9.3
